# Shop-MomandMe

./: .gitignore  .replit  API_CONNECTIONS.dm  AUDIT_APR28_PLAN.md  CLAUDE.md  amazon_trends.py  app.py  campaign_builder.py  collection_content.py  collection_service.py  db_schema.py  index.html  insights.py  link_builder.py  main.py  posts.py  product_api.py  product_lookup_service.py  prompts.py  pyproject.toml  replit.md  storefront_chat.py  walmart_storefront_enrichment.py  walmart_trends.py
attached_assets/: Amazon_May12_Analysis.xlsx  Pasted-Fix-the-archer-products-page-add-Send-to-Builder-action_1777916601973.txt  Pasted-You-are-fixing-and-extending-an-existing-Flask-app-echo_1777213470022.txt  Pasted-Your-audit-is-thorough-and-all-catches-are-correct-Proc_1777214408046.txt  URLgenius_API_Documentation_1777556388024.md  Walmart_May12_Analysis.xlsx  Walmart_May6th_Analysis.xlsx
branding/: overrides.json
docs/: PG_LAUNCH_RUNBOOK.md  UPSTREAM_SYNC.md  amazon_trending_now.md  walmart_trending_now.md
scripts/: cleanup_walmart_brands.py  migrate_sqlite_to_postgres.py  post-merge.sh  prod_seed.sql  refresh_walmart_trends.py  regenerate_walmart_links.py  urlgenius_probe.py  validate_amazon_creators.py
templates/: admin_creators.html  admin_login.html  archer_ads.html  archer_campaigns.html  archer_collage.html  archer_products.html  dashboard.html  echoagent_chat.html  hub.html  insights.html  insights_v2.html  organic_post_edit.html  organic_posts.html  organic_posts_manage.html  shop_directory.html  shop_landing.html  shop_posts.html  urlgenius_links.html  (+2 more)
(+65 files in other folders)
