[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.85.0",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=41.0.0",
]
